# fruit-jokes

./: Cargo.toml  README.md
.sqlx/: query-2cb3c71a3d5d9b750d8612dec9f4c87eda69b2e80f7b23550b53a6c213f3cd4a.json  query-2ddf4e63e03914867ff6057e5f402cd9dff0189b52a6ac53b7ed9e289fa63ba5.json
migrations/: 20240120225130_init.sql
src/: main.rs
src/api/: create_joke.rs  delete_joke.rs  mod.rs  read_all_jokes.rs
src/database/models/: joke.rs  mod.rs
templates/: base.html  index.html  joke.html  jokes.html
